# Eliteroboarm

./: .gitignore  CLAUDE.md  MODIFICATIONS_20260206.md  REALSENSE_INTEGRATION.md  REALSENSE_QUICK_START.md  T_eye_in_hand_chessboard.json  distCoeffs.json  external_control.script  intrinsics.json  launcher.py  manual_correction_tool.py  requirements.txt  test_realsense_integration.py  verify_realsense_config.py
config/: hardware_config.json  system.yaml  unified_window_settings.json
cpp_extensions/: CMakeLists.txt  EliteRobotController.cpp  EliteRobotController.hpp  README.md  compile_elite_ext.bat  cpp_wrapper.py  elite_ext.cpp  elite_ext.exp  elite_ext.lib  elite_ext_backup.cpp  elite_ext_new.cpp  simple_ext.cpp  test_cpp_extension.py  test_cpp_extensions.py  test_elite_ext_v2.py  vision_cpp_ext.cpp
cpp_extensions/simple_test/: CMakeLists.txt
src/algorithms/: __init__.py
src/algorithms/advanced/: __init__.py  color_detection.py  contour_detection.py  geometry_detection.py  image_blend.py  roi_extract.py  template_matching.py
src/algorithms/basic/: __init__.py  canny_edge.py  gaussian_blur.py  morphology.py  threshold.py
src/algorithms/composite/: __init__.py  abc.json  line_detect01.json  line_detection_py.json
src/algorithms/performance/: __init__.py  high_performance_edge.py  high_performance_template.py  high_performance_vision.py
src/algorithms/vmc/: __init__.py  vmc_algorithms.py
src/app/: __init__.py  bootstrap.py  hardware_launcher.py
src/core/: __init__.py  container.py
src/core/interfaces/algorithm/: __init__.py  robot_config_types.py  robot_data_types.py  vision_config_types.py  vision_data_types.py  vision_guidance.py
src/core/interfaces/algorithm/base/: __init__.py  algorithm_base.py
src/core/interfaces/algorithm/composite/: __init__.py  combined_algorithm.py
src/core/interfaces/communication/: __init__.py  system_data_types.py  task_data_types.py
src/core/interfaces/hardware/: __init__.py  camera_interface.py  config.py  light_interface.py  robot_interface.py
src/core/managers/: __init__.py  algorithm_registry.py  app_config.py  combined_algorithm_manager.py  config_manager.py  connection_manager.py  debug_manager.py  device_manager.py  device_registry.py  global_image_manager.py  hardware_manager.py  log_manager.py  vision_pipeline_executor.py  vmc_pipeline_executor.py  window_settings_manager.py
src/core/middleware/: __init__.py  core_engine_service.py  data_report_service.py  event_bus.py  state_manager.py  types_dto.py
src/core/services/: __init__.py  calibration_service.py  camera_factory.py  camera_service.py  light_service.py  robot_factory.py  robot_service.py
src/drivers/: __init__.py
src/drivers/camera/: __init__.py  basler.py  daheng.py  flir.py  hikvision.py  realsense.py  simulation.py
src/drivers/communication/: __init__.py  serial_connector.py  usb_connector.py
src/drivers/light/: __init__.py  digital.py  simulation.py
src/drivers/robot/: __init__.py  elite.py  elite_sdk_wrapper.py  kuka.py  simulation.py  universal_robot.py  yamaha.py
src/drivers/robot/elite_wrapper/: CMakeLists.txt  elite_wrapper.cpp
src/simple_test/: test_vision_logic.py
src/ui_libs/hardware_widget/: __init__.py  hardware_management_main_window.py
src/ui_libs/hardware_widget/camera/: __init__.py  camera_control.py  camera_info.py  camera_preview.py  camera_preview_old.py  save_path_dialog.py
src/ui_libs/hardware_widget/hardware_config/: __init__.py  hardware_config_dialog.py  hardware_config_tab.py
src/ui_libs/hardware_widget/light/: __init__.py  light_control.py
src/ui_libs/hardware_widget/robotic_arm/: __init__.py  flexible_shooting_widget.py  robot_control.py  robot_control_old.py
src/ui_libs/vision_canvas/canvas/: __init__.py  canvas.py  canvas_dialog.py  connections.py  image_dialog.py  nodes.py  recursive_combined_algorithm_dialogs.py
src/ui_libs/vision_canvas/components/: __init__.py  algorithm_panel.py  parameter_widget.py  type_aware_parameter_widget.py
src/ui_libs/vision_canvas/dialogs/: interactive_roi_selection.py  intermediate_result_dialog.py  save_combined_algorithm_dialog.py
src/ui_libs/vision_robot_widget/: __init__.py  canvas.py  connections.py  node_parameter_dialogs.py  nodes.py  vision_robot_dialog.py
src/utils/: __init__.py  build_cpp_extension.py  image_utils.py
workspace/: calibration_3d_data.txt  calibration_data.txt
workspace/data/: .gitkeep
